# ot_harjoitustyo

./: .gitignore  README.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
one-minute-workout/: .coveragerc  README.md  pyproject.toml  tasks.py
one-minute-workout/documentation/: architecture.md  specification.md  testing.md  user_faq.md  working_hours.md
one-minute-workout/src/: application.py  config.py  counter.py  database.py  exercise.py  index.py  threading_timer.py  timer.py  ui_user_signup.py  user.py  users.csv  users.json
one-minute-workout/src/db/: database.py  users.json
one-minute-workout/src/exercises/: 1.txt  2.txt  3.txt  4.txt  5.txt
one-minute-workout/src/tests/: application_test.py  counter_test.py  database_test.py  exercise_test.py  timer_test.py  user_test.py
one-minute-workout/src/ui/: ui_exercise.py  ui_main.py  ui_threading_timer.py  ui_timer.py  ui_user_login.py  ui_user_signup.py
