[tool.poetry]
name = "one-minute-workout"
version = "0.1.0"
description = ""
authors = ["Kaisa <45688258+KooEeVee@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
